--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/expression"
+        android:id="@+id/expressao"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginEnd="10dp"
@@ -20,15 +20,15 @@
         android:textSize="40sp" />
 
     <TextView
-        android:id="@+id/result_final"
+        android:id="@+id/resultado"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="10dp"
-        android:ellipsize="end"
+        android:ellipsize="start"
         android:gravity="end"
-        android:maxLines="1"
+        android:singleLine="true"
         android:textColor="@color/black"
-        android:textSize="30sp" />
+        android:textSize="40sp" />
 
 
     <LinearLayout
@@ -44,7 +44,7 @@
             android:text="C" />
 
         <Button
-            android:id="@+id/divide"
+            android:id="@+id/btn_divide"
             style="@style/Operators_Button"
             android:text="/" />
 
@@ -72,7 +72,7 @@
             android:text="9" />
 
         <Button
-            android:id="@+id/multiplication"
+            android:id="@+id/btn_multiplication"
             style="@style/Operators_Button"
             android:text="x" />
 
@@ -100,7 +100,7 @@
             android:text="6" />
 
         <Button
-            android:id="@+id/subtraction"
+            android:id="@+id/btn_subtraction"
             style="@style/Operators_Button"
             android:text="-" />
 
@@ -128,7 +128,7 @@
             android:text="3" />
 
         <Button
-            android:id="@+id/sum"
+            android:id="@+id/btn_sum"
             style="@style/Operators_Button"
             android:text="+" />
 
@@ -142,7 +142,7 @@
 
 
         <Button
-            android:id="@+id/point"
+            android:id="@+id/btn_point"
             style="@style/Numbers_Button"
             android:text="." />
 
@@ -158,7 +158,7 @@
             android:scaleType="center"/>
 
         <Button
-            android:id="@+id/equal"
+            android:id="@+id/btn_equal"
             style="@style/Operators_Button"
             android:text="=" />
 
